--- a/trunk/ARDroid/res/values/strings.xml
+++ b/trunk/ARDroid/res/values/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="hello">Hello World, Main!</string>
     <string name="app_name">ARDroid</string>
+    <string name="gps_disabled_dialog_title">GPS Disabled</string>
+    <string name="gps_disabled_dialog_text">ARDroid needs the GPS to be enabled in order to work.\nWould you like to enable it now?</string>
+    <string name="yes">Yes</string>
+    <string name="exit">Exit</string>
 </resources>
