--- a/trunk/ARDroid/res/values/strings.xml
+++ b/trunk/ARDroid/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="gps_disabled_dialog_text">ARDroid needs the GPS to be enabled in order to work.\nWould you like to enable it now?</string>
     <string name="yes">Yes</string>
     <string name="exit">Exit</string>
+    <string name="distance_text_popup">Distance:</string>
+    <string name="no_extra_data_popup">Sorry, there is no extra information for this Point Of Interest</string>
+    <string name="loading_popup_webview">Loading more info...</string>
 </resources>
