--- a/ARDroid/res/values/strings.xml
+++ b/ARDroid/res/values/strings.xml
@@ -2,11 +2,12 @@
 <resources>
     <string name="hello">Hello World, Main!</string>
     <string name="app_name">ARDroid</string>
-    <string name="gps_disabled_dialog_title">GPS Disabled</string>
+    <string name="gps_disabled_dialog_title">GPS</string>
     <string name="gps_disabled_dialog_text">ARDroid needs the GPS to be enabled in order to work.\nWould you like to enable it now?</string>
     <string name="yes">Yes</string>
     <string name="exit">Exit</string>
     <string name="distance_text_popup">Distance:</string>
     <string name="no_extra_data_popup">Sorry, there is no extra information for this Point Of Interest</string>
     <string name="loading_popup_webview">Loading more info...</string>
+    <string name="accuracy">Accuracy:</string>
 </resources>
